Added Orders Tab and Logic 03-06-2024

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,7 +2,7 @@
     max-width: 800px;
     margin: 80px auto;
     padding: 20px;
-    background-color: #f8f9fa; /* Light gray background color */
+    background-color: #f8f9fa;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
