--- a/src/app/view/view.component.scss
+++ b/src/app/view/view.component.scss
@@ -1,5 +1,5 @@
 .product-cards-container {
-    margin-top: 20px; /* Adjust the top margin as needed */
+    margin-top: 20px;
   }
   
 .product-cards-container {
