--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,15 +1,37 @@
-<div class="cart-cards-container">
-    <mat-card *ngFor="let cartItem of this.cartItems" class="cart-card">
-      <mat-card-header>
-        <mat-card-title>{{ cartItem.title }}</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <p><strong>Product:</strong> {{ cartItem.title }}</p>
-        <p><strong>Price:</strong> {{ cartItem.price }}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button color="warn">Delete</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-  
+<div class="container mt-4">
+    <div class="row my-0">
+        <div class="cart-table-container col-md-12 my-0">
+            <table mat-table [dataSource]="cartItems" class="mat-elevation-z8">
+                <ng-container matColumnDef="product">
+                    <th mat-header-cell *matHeaderCellDef> Product </th>
+                    <td mat-cell *matCellDef="let cartItem"> {{ cartItem.title }} </td>
+                </ng-container>
+                <ng-container matColumnDef="price">
+                    <th mat-header-cell *matHeaderCellDef> Price </th>
+                    <td mat-cell *matCellDef="let cartItem"> {{ cartItem.price }} </td>
+                </ng-container>
+                <ng-container matColumnDef="delete">
+                    <th mat-header-cell *matHeaderCellDef> </th>
+                    <td mat-cell *matCellDef="let cartItem">
+                        <button mat-button color="warn" (click)="deleteCartItem(cartItem.id)">Delete</button>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="['product', 'price', 'delete']"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['product', 'price', 'delete'];"></tr>
+            </table>
+        </div>
+    </div>
+    <div class="row my-0">
+        <div class="col-md-12 d-flex justify-content-end">
+            <div class="total-price-container">
+                <span class="total-price-label">Total Price:</span>
+                <span class="total-price">{{this.calculateTotalPrice()}}</span>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 d-flex justify-content-end">
+            <button mat-raised-button color="primary" (click)="this.createOrder()">Order Now</button>
+        </div>
+    </div>
+</div>
