--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,33 +1,31 @@
-.cart-cards-container {
-    margin-top: 20px; /* Adjust the top margin as needed */
+.container {
+    margin-top: 20px;
+    width: 100%;
   }
   
-.cart-cards-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
+  .cart-table-container {
+    margin-bottom: 20px;
   }
   
-  .cart-card {
-    width: calc(30% - 20px);
-    background-color: #f5f5f5;
-    border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
-    background-color:  rgba(255, 255, 200, 0.9);
-  }
-  
-  .cart-card mat-card-header {
-    padding: 12px;
-  }
-  
-  .cart-card mat-card-content {
-    padding: 12px;
-  }
-  
-  .cart-card mat-card-actions {
-    padding: 12px;
+  .total-price-container {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    padding: 10px;
+    background-color: lightgray;
+    border-radius: 5px;
   }
+  
+  .total-price-label {
+    font-weight: bold;
+    margin-right: 10px;
+  }
+  
+  .total-price {
+    font-weight: bold;
+    color: red;
+  }
+  
+  
+  @import "~bootstrap/dist/css/bootstrap.css";
   
