--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -11,7 +11,7 @@
             <td mat-cell *matCellDef="let orderItem"> {{ orderItem.price }} </td>
           </ng-container>
           <ng-container matColumnDef="productMap">
-            <th mat-header-cell *matHeaderCellDef> Product Map </th>
+            <th mat-header-cell *matHeaderCellDef>Products Ordered </th>
             <td mat-cell *matCellDef="let orderItem">
               <span *ngFor="let product of orderItem.productMap; let i = index">
                 {{ product }}<span *ngIf="i < orderItem.productMap.length - 1">, </span>
