--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -3,7 +3,7 @@
       <div class="cart-table-container col-md-12 my-0">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table-responsive">
           <ng-container matColumnDef="product">
-            <th mat-header-cell *matHeaderCellDef> Product </th>
+            <th mat-header-cell *matHeaderCellDef> Order </th>
             <td mat-cell *matCellDef="let orderItem"> {{ orderItem.title }} </td>
           </ng-container>
           <ng-container matColumnDef="price">
