--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -36,21 +36,24 @@
     <div class="row my-0">
       <div class="col-md-12 my-0">
         <mat-form-field style="width: 100%;">
-          <input matInput type="number" step="0.01" required min="0.01"  placeholder="Price" [(ngModel)]="product.price" name="productPrice" required>
+          <input matInput type="number" step="0.01" required min="0.01" placeholder="Price" [(ngModel)]="product.price"
+            name="productPrice" required>
         </mat-form-field>
       </div>
     </div>
     <div class="row my-0">
       <div class="col-md-12 my-0">
         <mat-form-field style="width: 100%;">
-          <textarea matInput placeholder="Description" [(ngModel)]="product.description" name="productDescription" row my-0s="4"></textarea>
+          <textarea matInput placeholder="Description" [(ngModel)]="product.description" name="productDescription" row
+            my-0s="4"></textarea>
         </mat-form-field>
       </div>
     </div>
     <div class="row my-0">
       <div class="col-md-12 my-0">
         <mat-form-field style="width: 100%;">
-          <textarea matInput placeholder="Specification" [(ngModel)]="product.specification" name="productSpecification" row my-0s="4"></textarea>
+          <textarea matInput placeholder="Specification" [(ngModel)]="product.specification" name="productSpecification"
+            row my-0s="4"></textarea>
         </mat-form-field>
       </div>
     </div>
