--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -5,11 +5,13 @@
       </mat-card-header>
       <mat-card-content>
         <p><strong>Price:</strong> {{ productItem.price }}</p>
+        <p><strong>Product Type:</strong> {{ productItem.productType }}</p>
         <p><strong>Description:</strong> {{ productItem.description }}</p>
         <p><strong>Specification:</strong> {{ productItem.specification }}</p>
       </mat-card-content>
       <mat-card-actions>
         <button mat-button color="primary" (click)="addToCart(productItem)">Add</button>
+        <button mat-button color="warn" (click)="deleteProduct(productItem.id)">Delete</button>
       </mat-card-actions>
     </mat-card>
   </div>
